--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,11 @@
             <version>1.8.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.6</version>
+        </dependency>
+
     </dependencies>
 </project>
