--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,11 @@
             <version>3.2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
     </dependencies>
 </project>
